package org.example.rubricatelefonicaids_gruppo8.Models;

public class VCard {
}
